--- a/flowchart.html
+++ b/flowchart.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Flowchart</title>
+    <link rel="stylesheet" href="flowchart.css">
+    <script src="flowchart.js"></script>
 </head>
 <body>
 
