--- a/flowchart.html
+++ b/flowchart.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <div id="create">Trykk for å lage boks</div>
+    <div><button type="button" id="box">create box</button></div>
     
 </body>
 </html>
