--- a/flowchart.html
+++ b/flowchart.html
@@ -12,5 +12,9 @@
 
     <div><button type="button" id="box">create box</button></div>
     
+
+    <script>
+        setup();
+    </script>
 </body>
 </html>
